--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,3 @@
-# This is the list of POMMES' contributors.
+# This is the list of POMMES-MILP's contributors.
 
-Thibaut Knibiehly <thibaut.knibiehly@minesparis.psl.eu>
-Quentin Railllard--Cazanove <quentin.raillard-cazanove@minesparis.psl.eu>
-Anaellle Jodry <anaelle.jodry@minesparis.psl.eu>
-Robin Girard <robin.girard@minesparis.psl.eu>
+Quentin Raillard--Cazanove <quentin.raillard--cazanove@kuleuven.be>
